syntax = "proto3";

package tools.teal.pulsar.ui.clusters.v1;

import "google/rpc/status.proto";

message ListClustersRequest {
}

message ListClustersResponse {
  google.rpc.Status status = 1;
  repeated string clusters = 2;
}

service ClustersService {
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {}
}
